--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -4,51 +4,62 @@
     width 100%
     .row
         margin 0
-    hr
-        margin 5
-        border-top 1px solid border-grey
     *
         box-sizing border-box
         padding 0px
     .row, [class^="col-"]
         padding 0px
     .reports-holder
-        padding-left  2%
-        padding-right   2%
+        //padding-left  2%
+        //padding-right   2%
         padding-bottom 1%
         //border 1px solid border-grey
         //border-radius 10px
         //background-color background-white
         //box-shadow 0px 5px 20px 2px  shadow-grey
     .reports-header
-        border-bottom  1px solid border-grey
-        h3
-            font-family "Montserrat"
-            font-size 30px
-            text-align left
+        h2
+             border-bottom 4px dashed grey
+             font-family "Montserrat"
+             line-height: 60px
         padding 1%
     .reports-recent
+        width 80%
+        margin-left 10%
         table
-            border-radius 5px
-            box-shadow 0px 2px 3px 2px  border-grey
+            color text-input
+            background-color: active-input
             td
                 padding 1%
+                padding-top: 2%
                 text-align left
                 word-break break-all
+                line-height: 40px
+                &:first-child
+                    padding-left 3%
             .t-head
+                border-top-left-radius 4px
                 font-family "Montserrat"
                 font-size 20px
-                background-color border-grey
+                background-color disable-input
+                border-top-right-radius: 10px
+                border-top-left-radius: 10px
                 td
-                    border-right 1px solid white
+                    font-weight: bold
+                    //border-right 1px solid white
             .t-body
-                
                 font-size 18px
                 border-bottom 1px solid border-grey
+                &:last-child
+                    border-bottom-right-radius: 10px
+                    border-bottom-left-radius: 10px
+                    border-bottom 4px solid border-color
                 td
                     font-family "Open Sans"
-                    border-right 1px solid border-grey
+                    //border-right 1px solid border-grey
     .reports-samples
+        width 80%
+        margin-left 10%
         .masonry
             -moz-column-count 2
             -webkit-column-count  2
@@ -56,35 +67,55 @@
             -webkit-column-gap 1em
         .item
             display inline-block
-            background-color #d8d8d8
+            background-color active-input
             margin  1%
             padding  2%
+            padding-left: 5%
             width 100%
-            border 2px solid main-blue
-            border-radius 5px
-            box-shadow 0px 2px 3px 2px  border-grey
+            border: 1px solid border-color
+            border-radius 10px
+            border-bottom 4px solid border-color
             font-family "Montserrat"
             font-size 18px
+            .brd-bt
+                padding 1%
             .item-title
                 font-size 20px
+                line-height: 30px
                 word-break break-all
             .item-def
                 font-weight bold
-                 font-size 20px
+                font-size 20px
             .item-value
                  font-family "Open Sans"
                  flex-wrap wrap
             .item-row
                 margin-bottom 2%
     .generate-holder
+        width: 80%
+        margin-left: 10%
         .generate-item-header
-            background-color #d8d8d8
-            border-bottom 1px solid border-grey
-            font-size 18px
+            font-size 20px
             font-family "Montserrat"
             padding 1%
             text-align left
             border-radius 5px
+            .gen-title
+                font-weight: bold
+                font-size: 23px
+            input
+                border-radius 4px
+                border none
+                outline none
+                border-bottom 4px solid border-color
+                background-color disable-input
+                color text-input
+                font-family "Montserrat"
+                text-align center
+                font-size 20px
+                line-height: 40px
+                &:focus
+                    background-color active-input
             [type='date']
                 font-size 15px
         .generate-item-holder
@@ -93,6 +124,12 @@
             display flex
             align-items center
             justify-content space-around
+            border-bottom 4px solid border-color
+            background-color disable-input
+            border-radius: 10px
+        .hidden-gen
+            border-bottom none
+            background-color transparent
         .generate-item
             position relative
             width -webkit-fit-content
@@ -154,18 +191,33 @@
                 border-left 1px solid #d8d8d8
     .button
         button()
+        display flex
+        padding 1%
+        justify-content center
+        align-items center
+        --box-shadow-color #004D40
+        background-color #2e8f35
     .btn
         font-family "Montserrat"
-        height 40px
+        height 50px
         font-size 20px
      .f-btn
         font-family "FontAwesome" 
         height 40px
         font-size 20px
+    .delete-btn
+        background-color #cb4e4e
+    .view-btn
+        background-color #F5F5F5
+        //border: 1px solid text-input
+        border: 1px solid text-input
+        &::before
+            color text-input
     .chapter-title
         font-family "Montserrat"
         font-size 25px
         div
             padding 2%
+    
 
 
