--- a/frontend/components/tasks/taskCreateEditTemplate.pug
+++ b/frontend/components/tasks/taskCreateEditTemplate.pug
@@ -1,4 +1,4 @@
-user-list(user-data = 'taskCE.users', select-callback = 'taskCE.onUserSelect', parent-scope='taskCE', ng-if='taskCE.userListFlag')
+user-list(user-data = 'taskCE.users', select-callback = 'taskCE.onUserSelect', parent-scope='taskCE', ng-if='taskCE.userListFlag',is-showed = "taskCE.userListFlag")
 .task-wrapper.row.center-xs
 	.main-container.col-xs-8
 		.wrapper_lable.row
