--- a/frontend/components/project/project.component.pug
+++ b/frontend/components/project/project.component.pug
@@ -1,5 +1,5 @@
-user-list(user-data = 'proj.users', select-callback = 'proj.onUserSelect', parent-scope='proj', ng-if='proj.userListFlag')
-user-list(user-data = 'proj.users', select-callback = 'proj.onAdminSelect', parent-scope='proj', ng-if='proj.adminListFlag')
+user-list(user-data = 'proj.users', select-callback = 'proj.onUserSelect', parent-scope='proj', ng-if='proj.userListFlag',is-showed = "proj.userListFlag")
+user-list(user-data = 'proj.users', select-callback = 'proj.onAdminSelect', parent-scope='proj', ng-if='proj.adminListFlag',is-showed = "proj.adminListFlag")
 .projectwrapper
   .row.center-xs
     .main.col-xs-12
