change directive userList

--- a/frontend/directives/userList/userList.styl
+++ b/frontend/directives/userList/userList.styl
@@ -22,7 +22,12 @@
 	.field_description
 		font-family "Montserrat"
 		font-size 1.3em
+		padding-left 17%
 		color #22313F
+	.close
+		display flex
+		justify-content flex-end
+		padding-left 2px
 	.user_list
 		align-items flex-start
 		justify-content center
