--- a/frontend/directives/userList/userList-pug.directive.pug
+++ b/frontend/directives/userList/userList-pug.directive.pug
@@ -1,7 +1,10 @@
-.directive_background
+.directive_background(ng-click="ulCtrl.close()")
 .directive_userList.row.center-xs
-	.row.field_description.center-xs.col-xs-12
-		.col-xs-12.center-xs User List
+	.row.field_description.center-xs.col-xs-10
+		.col-xs-9.center-xs User List
+	.row.close.col-xs-3
+		a(ng-click="ulCtrl.close()")
+			i.fa.fa-times
 	.col-xs-12.user_list.center-xs
 		.user_field.center-xs.col-xs-12(ng-repeat="user in ulCtrl.scope.userData | filter: ulCtrl.searchText",ng-click="ulCtrl.scope.selectCallback(user)")
 			.col-xs-12.center-xs.name {{user.firstName}} {{user.lastName}} (<span class="emailText">{{user.email}}</span>)
