Task s MessBoard update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/createProject/createProject-pug.component.pug
+++ b/frontend/components/createProject/createProject-pug.component.pug
@@ -1,8 +1,7 @@
 user-list(user-data = 'createProj.users', select-callback = 'createProj.onUserSelect', parent-scope='createProj', ng-if='createProj.userListFlag')
 user-list(user-data = 'createProj.users', select-callback = 'createProj.onAdminSelect', parent-scope='createProj', ng-if='createProj.adminListFlag')
 .createProject_wrapper
-	.row.center-xs
-		.main.col-xs-12
+		.main
 			h1 New Project
 			form.row.center-xs(name="newProject",novalidate)
 				
