--- a/public/libs/css/generalComponentsStyle.styl
+++ b/public/libs/css/generalComponentsStyle.styl
@@ -17,8 +17,8 @@ button()
     border-radius 5px
     font-family "Montserrat"
     color white !important
-    padding 1%
-    font-size 30px
+    padding 1em
+    font-size 24px
     cursor pointer
     border none
     outline none
@@ -31,7 +31,7 @@ button()
         transform translateY(0px)
         box-shadow 0 0
 main-component()
-    padding 1em
+    padding 23px
     // border 1px solid border-grey
     border-radius 10px
     background-color #F5F5F5
