--- a/frontend/components/checkins/checkinsCreate-pug.component.pug
+++ b/frontend/components/checkins/checkinsCreate-pug.component.pug
@@ -3,13 +3,12 @@
         .header-setup
             .close-btn
                 a(ng-link='["Checkins List"]')
-                    .fa.fa-close.fa-2x.button
+                    i.fa.fa-close
             h3 What question do you want to ask?
             input.question(type='text', ng-model="CheckCr.question" placeholder='Type your question...')
         .main-setup
             h3 Who do you want to ask?
-            section.use-button
-                div(ng-click='CheckCr.toggleAll()') Ask all
+            button(ng-click='CheckCr.toggleAll()') Ask all
             ul.user-list
                 li.list(ng-repeat="part in CheckCr.participants track by $index")
                     label.checkbox(ng-click="CheckCr.toggleChekin()")
@@ -25,8 +24,7 @@
                 select#schedule-second(ng-model='CheckCr.selectedTime', ng-options='item for item in CheckCr.time',
                 ng-selected='CheckCr.time[0]')
 
-                div.use-button
-                    div.save-button(ng-click="CheckCr.save()") Save
+                button(ng-click="CheckCr.save()") Save
 
                 //a(ng-click="CheckCr.save()" )
                 //    i.fa.fa-floppy-o.fa-3x
