--- a/frontend/components/checkins/checkinsCreateStyles.styl
+++ b/frontend/components/checkins/checkinsCreateStyles.styl
@@ -9,7 +9,7 @@
         height 700px
         text-align center
         margin 0 auto
-        background-color #f5f5f5
+        background-color #dadfe1
         border 1px solid #adadad
         border-radius 10px
         & > *
@@ -32,23 +32,17 @@
         display flex
         justify-content flex-end
         margin 10px
-
-    .button
-        box-shadow 0px 0px 10px 0px grey
-        background-color main-blue
-        color white
-        border-radius 5px
-        height 40px
-        width 50px
-        padding 5px
-        margin 5px
-        transition 0.2s
-        cursor pointer
-        border none
-        &:hover
-            box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px main-blue
-        &:active
-            box-shadow 0px 0px 0px 0.5px white, 0px 0px 0px 2px main-blue, 0px 0px 5px 0px white inset
+        i
+            font-size 1.8em
+            //margin-right 10px
+            cursor pointer
+            border-radius 4px
+            color #424242
+            // background-color #ECF0F1
+            padding 6px
+            transition color 0.2s ease-out
+            &:hover
+                color #1d8dbf
 
     input
         &.question
@@ -63,43 +57,9 @@
     .main-setup
         height 60%
         overflow auto
-    .use-button
-        //- border-top-right-radius 20px
-        //- border-bottom-right-radius 20px
-        //- border 1px solid #ADADAD
-        background-color #F5F5F5
-        width 15%
-        display flex
-        flex-direction column
-        justify-content center
-        align-items stretch
-        margin auto
-        //- padding-left 2%
-        //- padding-right 2%
-        div
-            -moz-user-select -moz-none
-            -o-user-select none
-            -khtml-user-select none
-            -webkit-user-select none
-            user-select none
-            display flex
-            margin-top 15%
-            margin-bottom 0px
-            justify-content center
-            align-items center
-            border-radius 5px
-            background-color #1D8DBF
-            color WHITE
-            padding 1% 3% 1% 3%
-            font-size 24px
-            width 100px
-            height 45px
-            transition 0.2s
-            cursor pointer
-            &:active
-                box-shadow 0 0 0 0.5px WHITE, 0 0 0 2px main-blue, 0 0 5px 0 WHITE inset
-            &:hover
-                box-shadow 0 0 0 1px white, 0 0 0 4px #1D8DBF
+        button
+            button()
+            margin auto
 
     label
         &.checkbox
@@ -129,6 +89,8 @@
         display inline-flex
         //justify-content space-between
         //align-items center
+        button
+            button()
         select
             padding-top 2px
             border-radius 3px
@@ -137,6 +99,6 @@
             outline none
             margin 10px
 
-    .fa-floppy-o
-        &:hover
-            color #00c000
+    //.fa-floppy-o
+    //    &:hover
+    //        color #00c000
