--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -131,7 +131,7 @@
             border-bottom none
             background-color transparent
         .generate-item
-            position relative
+            /*position relative
             width -webkit-fit-content
             text-indent  2%
             cursor pointer
@@ -142,14 +142,14 @@
             box-shadow 0px 2px 3px 2px  border-grey
             font-size 18px
             font-family "Open Sans"
-            color white
+            color white*/
             span
-                text-indent 1%
+                /*text-indent 1%
                 position absolute
                 left 0
                 top 20%
                 color white
-                display inline-block
+                display inline-block*/
                 font-family "FontAwesome"
         .item-out-group
             background-color main-blue
