--- a/frontend/components/reports/reportAdd.template.pug
+++ b/frontend/components/reports/reportAdd.template.pug
@@ -18,18 +18,18 @@
                                 input(type='text' ng-model="reportAdd.description" placeholder="You report description").col-xs-12
                             .row.generate-item-header.middle-xs.between-xs
                                 .col-xs-2.gen-title Type:
-                                .col-xs-8.generate-item-holder(ng-class="{'hidden-gen': reportAdd.types.length==0}")
-                                    span.generate-item(ng-click='reportAdd.gui.manageItem($index, reportAdd.types, reportAdd.typeSamples, "type", reportAdd.checkin)' ng-repeat = 't in reportAdd.types track by $index') {{t}}
+                                .col-xs-8.generate-item-holder.hidden-gen
+                                    span.generate-item.button(ng-click='reportAdd.gui.manageItem($index, reportAdd.types, reportAdd.typeSamples, "type", reportAdd.checkin)' ng-repeat = 't in reportAdd.types track by $index') {{t}}
                                         span &#xf068
                                 .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportAdd.gui.isTypePanel, "fa-angle-down": reportAdd.gui.isTypePanel}' ng-click='reportAdd.gui.manageTypePanel()')
                             .row
                                 .col-xs-12.generate-item-holder(ng-show='reportAdd.gui.isTypePanel')
-                                    span.generate-item(ng-click='reportAdd.gui.manageItem($index, reportAdd.typeSamples, reportAdd.types, "type", reportAdd.checkin, true)' ng-repeat = 't in reportAdd.typeSamples track by $index') {{t}}
+                                    span.generate-item.button(ng-click='reportAdd.gui.manageItem($index, reportAdd.typeSamples, reportAdd.types, "type", reportAdd.checkin, true)' ng-repeat = 't in reportAdd.typeSamples track by $index') {{t}}
                                         span &#xf067
 
                             .row.generate-item-header.middle-xs.between-xs(ng-show="reportAdd.checkin.isCheckinPick")
                                 .col-xs-2.gen-title Checkins:
-                                .col-xs-8.generate-item-holder
+                                .col-xs-8.generate-item-holder.hidden-gen
                                 .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportAdd.gui.isCheckinPanel, "fa-angle-down": reportAdd.gui.isCheckinPanel}' ng-click='reportAdd.gui.manageCheckinPanel()')
                             .row(ng-show="reportAdd.checkin.isCheckinPick")
                                 .col-xs-12.generate-item-holder(ng-show='reportAdd.gui.isCheckinPanel')
@@ -37,7 +37,7 @@
                                         span {{reportAdd.checkin.report.indexOf(c._id)==-1?"&#xf067":"&#xf068"}}
                             .row.generate-item-header.middle-xs.between-xs
                                 .col-xs-2.gen-title User:
-                                .col-xs-8.generate-item-holder(ng-class="{'hidden-gen': reportAdd.users.length==0}")
+                                .col-xs-8.generate-item-holder.hidden-gen
                                     span.generate-item(ng-click='reportAdd.gui.manageItem($index, reportAdd.users, reportAdd.userSamples, "user")' ng-repeat = 'u in reportAdd.users track by $index') {{u}}
                                         span &#xf068
                                 .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportAdd.gui.isUserPanel, "fa-angle-down": reportAdd.gui.isUserPanel}' ng-click='reportAdd.gui.manageUserPanel()')
