--- a/frontend/components/events/eventsStyles.styl
+++ b/frontend/components/events/eventsStyles.styl
@@ -1,35 +1,47 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
 .events-wrapper
     width 100%
-    padding 1%
+    h1
+        header-style()
+    .main
+        main-component()
     .row
         padding 0
         margin 0
 
     .events-holder
-        padding 1%
-        border 1px solid border-grey
-        border-radius 10px
-        background-color background-white 
-        box-shadow 0px 5px 20px 2px  #808080
-        .events-header 
-            border-bottom 1px solid grey
-            padding 1%
-            span
+        .createbutton
+            width 100%
+            margin 5px auto
+            button
+                button()
                 font-family "Montserrat"
-                text-align center
-                width 100%
-                display inline-block
-                font-weight bold
-                font-size 30px    
-        .button
-            button()
-            font-family "Montserrat"
-            font-size 24px
-            height 34px
-        .chose-event
-            input[type=date]
-                border-radius 5px
+                font-size 24px
+                margin 5px auto
+                padding 15px 50px
+                --box-shadow-color #004D40
+                background-color #2e8f35     
+        .choose-event-container
+            .form-inline
+                width 80%
+                margin 25px auto
+                .form-group
+                    display inline-flex
+                    align-items center
+                    margin-right 2em
+                    .input-group
+                        margin 0
+                    .pull-left
+                        label
+                            margin 0
+                            margin-right 0.7em
+                .search_button
+                    display inline-block
+                    font-size 1.5em
+                    cursor pointer
+                    border-radius 4
+                    border 1px solid border-color
+            
         .events-items
             overflow hidden
             margin 0px auto
