--- a/frontend/components/checkins/checkinsCreateStyles.styl
+++ b/frontend/components/checkins/checkinsCreateStyles.styl
@@ -6,7 +6,7 @@
         flex-flow row wrap
         justify-content center
         max-width 650px
-        height 700px
+        height 750px
         text-align center
         margin 0 auto
         background-color #dadfe1
@@ -24,7 +24,7 @@
         list-style none
 
     .header-setup
-        height 22%
+        height 19%
         h3
             margin 0
 
@@ -55,7 +55,7 @@
             margin 15px
 
     .main-setup
-        height 60%
+        height 58%
         overflow auto
         button
             button()
@@ -80,24 +80,27 @@
         margin-right 30px
 
     .footer-setup
-        height 18%
+        height 23%
         .save-button
             margin 0px
             height 40px
 
     .schedule
         display inline-flex
-        //justify-content space-between
-        //align-items center
-        button
-            button()
         select
             padding-top 2px
             border-radius 3px
             border 1px solid #adadad
-            font-size 17px
             outline none
-            margin 10px
+            margin-left 25px
+    div
+        #schedule-second
+            margin-top 35px
+            font-size 20px
+        button
+            button()
+            margin-left 25px
+            margin-top 30px
 
     //.fa-floppy-o
     //    &:hover
