--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -135,7 +135,9 @@
         ul.header
             display flex
             justify-content space-between
-            font-size 21px
+            //font-size 21px
+            .teste
+                word-break break-all
 
         ul.main
             margin-top -50px
