checkin info page without thml tags in answers

--- a/frontend/components/checkins/checkinsInfo-pug.component.pug
+++ b/frontend/components/checkins/checkinsInfo-pug.component.pug
@@ -21,4 +21,4 @@
                 li.list(ng-repeat="var in chInfo.groupedAsnwers[i] | filter:{ answer: '!noAnswer'}") 
                     span.name {{var.user.firstName + ' ' + var.user.lastName }}
                     br
-                    span {{var.answer}}
+                    span(ng-bind-html='var.answer')
